[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
actix-web = "4"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
serde = "1.0.190"
anyhow = "1.0"
actix-cors = "0.6.4"
serde_json = "1.0.108"
tokio = "1.33.0"
lazy_static = "1.4.0"
