[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
ferinth = { git = "https://github.com/SiongSng/ferinth.git", rev = "fb1d6f167dbde61a53a6962d39b0ac143f276d04" }
serde = "1.0.190"
anyhow = "1.0.75"
